--- a/style.css
+++ b/style.css
@@ -1,201 +1,6 @@
-#parent{
+#error{
     position: absolute;
-    height: 100%;
-    width: 100%;
-    left: 0;
-    top: 0;
-}
-body{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
-#overlay{
-    position: absolute;
-    height: 15%;
-    width: 100%;
-    top: 0;
-    background-color: rgb(24, 24, 151);
-}
-#first{
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 65%;
-    background-color: white;
-}
-#logo{
-    position: absolute;
-    height: 62%;
-    top: 20%;
-    left: 15%;
-}
-#par{
-    position: absolute;
-    top: 78%;
-    left: 20%;
-}
-#thanks{
-    font-size: 24px;
-    color: rgb(24, 24, 151);
-}
-#we{
-    font-size: 17px;
-}
-#second{
-    position: absolute;
-    top: 0;
-    right: 0;
-    height: 100%;
-    width: 35%;
-    background-color: white;
-}
-#parr{
-    position: absolute;
-    left: 1%;
-    top: 15%;
-}
-#create{
-    font-weight: bolder;
-    font-size: 37px;
-}
-#free{
-    font-size: 18px;
-}
-#form{
-    position: absolute;
-    left: 1%;
-    top: 30%;
-}
-#firstname{
-    padding: 10px;
-    border-radius: 5px;
-    outline: 0;
-    border: 1px solid black;
-}
-#surname{
-    padding: 10px;
-    border-radius: 5px;
-    outline: 0;
-    border: 1px solid black;
-}
-#mobile{
-    padding: 8px;
-    border-radius: 5px;
-    outline: 0;
-    border: 1px solid black;
-    width: 370px;
-}
-#newpass{
-    padding: 10px;
-    border-radius: 5px;
-    outline: 0;
-    border: 1px solid black;
-    width: 370px;
-}
-/* #password2{
-    padding: 10px;
-    border-radius: 5px;
-    outline: 0;
-    border: 1px solid black;
-    width: 370px;
-} */
-#select{
-    padding: 5px;
-}
-#select2{
-    padding: 5px;
-    width: 75px;
-}
-#select3{
-    padding: 5px;
-}
-#submit{
-    padding: 14px;
-    width: 180px;
-    border-radius: 7px;
-    outline: 0;
-    border: 0;
-    color: white;
-    font-weight: bolder;
-    font-size: 17px;
-    background-color: olivedrab;
-}
-#terms{
-    text-decoration: none;
-    color: rgb(24, 24, 151);
-    font-size: 13px;
-}
-#page{
-    font-size: 13px;
-}
-#why{
-    position: absolute;
-    top: 60%;
-    left: 45%;
-    text-decoration: none;
-    color: rgb(24, 24, 151);
-    font-size: 13px;
-}
-#pclick{
-    font-size: 13px;
-}
-#face{
-    position: absolute;
-    font-weight: bolder;
-    left: 5%;
-    margin-top: 2%;
-    color: white;
-    font-size: 45px;
-}
-#pass{
-    position: absolute;
-    top: 15%;
-    left: 78%;
-    color: white;
-}
-#pass2{
-    position: absolute;
-    padding: 3px;
-    top: 40%;
-    left: 78%;
-    width: 130px;
-    outline: 0;
-    background-color: khaki;
-    border: 1px solid black;
-}
-#email{
-    position: absolute;
-    top: 15%;
-    left: 66%;
-    color: white;
-}
-#email2{
-    position: absolute;
-    padding: 3px;
-    top: 40%;
-    left: 66%;
-    width: 130px;
-    outline: 0;
-    background-color: khaki;
-    border: 1px solid black;
-}
-#for{
-    position: absolute;
-    top: 70%;
-    left: 78%;
-    text-decoration: none;
-    color: white;
-    font-size: 11px;
-}
-#sub{
-    position: absolute;
-    left: 90%;
-    top: 40%;
-    color: white;
-    outline: 0;
-    border: 0;
-    padding: 5px;
-    font-size: 11px;
-    box-shadow: 1px 1px 5px black;
-    background-color: rgb(24, 24, 151);
+    font-size: 0.9em;
+    top: 66%;
+    font-weight: 600;
 }
