--- a/css/color-orange.css
+++ b/css/color-orange.css
@@ -2,7 +2,7 @@
 		COLOR Orange
 ==============================*/
 a, a:focus {
-  color: #fd7e14;
+  color: #4B0082;
 }
 
 a:hover, a:active {
@@ -10,7 +10,7 @@ a:hover, a:active {
 }
 
 .oxyy-login-register .nav:not(.nav-pills) .nav-item .nav-link.active, .oxyy-login-register .nav:not(.nav-pills) .nav-item .nav-link:hover {
-  color: #fd7e14;
+  color: #4B0082;
 }
 
 .oxyy-login-register .nav-tabs .nav-item .nav-link.active {
@@ -18,27 +18,27 @@ a:hover, a:active {
 }
 
 .oxyy-login-register .nav-tabs .nav-item .nav-link.active:after {
-  background-color: #fd7e14;
+  background-color: #4B0082;
 }
 
 .oxyy-login-register .nav-tabs .nav-item .nav-link:not(.active):hover {
-  color: #fd7e14;
+  color: #4B0082;
 }
 
 .oxyy-login-register .nav-tabs.flex-column .nav-item .nav-link.active {
-  color: #fd7e14;
+  color: #4B0082;
 }
 
 .oxyy-login-register .nav-pills .nav-link:not(.active):hover {
-  color: #fd7e14;
+  color: #4B0082;
 }
 
 .oxyy-login-register .bg-primary, .oxyy-login-register .badge-primary {
-  background-color: #fd7e14 !important;
+  background-color: #4B0082 !important;
 }
 
 .oxyy-login-register .text-primary, .oxyy-login-register .link-primary, .oxyy-login-register .btn-link {
-  color: #fd7e14 !important;
+  color: #4B0082 !important;
 }
 
 .oxyy-login-register .btn-link:hover, .oxyy-login-register .link-primary:hover {
@@ -58,12 +58,12 @@ a:hover, a:active {
 }
 
 .oxyy-login-register .border-primary {
-  border-color: #fd7e14 !important;
+  border-color: #4B0082 !important;
 }
 
 .oxyy-login-register .btn-primary {
-  background-color: #fd7e14;
-  border-color: #fd7e14;
+  background-color: #4B0082;
+  border-color: #4B0082;
 }
 
 .oxyy-login-register .btn-primary:hover {
@@ -82,19 +82,19 @@ a:hover, a:active {
 }
 
 .oxyy-login-register .btn-outline-primary, .oxyy-login-register .btn-outline-primary:not(:disabled):not(.disabled).active, .oxyy-login-register .btn-outline-primary:not(:disabled):not(.disabled):active {
-  color: #fd7e14;
-  border-color: #fd7e14;
+  color: #4B0082;
+  border-color: #4B0082;
 }
 
 .oxyy-login-register .btn-outline-primary:hover, .oxyy-login-register .btn-outline-primary:not(:disabled):not(.disabled).active:hover, .oxyy-login-register .btn-outline-primary:not(:disabled):not(.disabled):active:hover {
-  background-color: #fd7e14;
-  border-color: #fd7e14;
+  background-color: #4B0082;
+  border-color: #4B0082;
   color: #fff;
 }
 
 .oxyy-login-register .progress-bar,
 .oxyy-login-register .nav-pills .nav-link.active, .oxyy-login-register .nav-pills .show > .nav-link, .oxyy-login-register .dropdown-item.active, .oxyy-login-register .dropdown-item:active {
-  background-color: #fd7e14;
+  background-color: #4B0082;
 }
 
 .oxyy-login-register .page-item.active .page-link,
@@ -102,17 +102,17 @@ a:hover, a:active {
 .oxyy-login-register .custom-control-input:checked ~ .custom-control-label::before,
 .oxyy-login-register .custom-checkbox .custom-control-input:checked ~ .custom-control-label:before,
 .oxyy-login-register .custom-control-input:checked ~ .custom-control-label:before {
-  background-color: #fd7e14;
-  border-color: #fd7e14;
+  background-color: #4B0082;
+  border-color: #4B0082;
 }
 
 .oxyy-login-register .list-group-item.active {
-  background-color: #fd7e14;
-  border-color: #fd7e14;
+  background-color: #4B0082;
+  border-color: #4B0082;
 }
 
 .oxyy-login-register .page-link {
-  color: #fd7e14;
+  color: #4B0082;
 }
 
 .oxyy-login-register .page-link:hover {
